--- a/public/assets/css/app-saas.css
+++ b/public/assets/css/app-saas.css
@@ -165,7 +165,7 @@ html[data-theme=dark][data-topbar-color=dark] {
   --ct-black-rgb: 0, 0, 0;
   --ct-body-color-rgb: 108, 117, 125;
   --ct-body-bg-rgb: 250, 251, 254;
-  --ct-font-sans-serif: "Nunito", sans-serif;
+  --ct-font-sans-serif: "Outfit", sans-serif;
   --ct-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --ct-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --ct-body-font-family: var(--ct-font-sans-serif);
@@ -14395,37 +14395,37 @@ html[data-layout=topnav] #topnav-color {
   }
 }
 @font-face {
-  font-family: "Nunito";
-  src: url("../fonts/Nunito-Light.eot");
-  src: local("Nunito Light"), local("Nunito-Light"), url("../fonts/Nunito-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Nunito-Light.woff") format("woff"), url("../fonts/Nunito-Light.ttf") format("truetype"), url("../fonts/Nunito-Light.svg#Roboto") format("svg");
+  font-family: "Outfit";
+  src: url("../fonts/Outfit-Light.eot");
+  src: local("Outfit Light"), local("Outfit-Light"), url("../fonts/Outfit-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-Light.woff") format("woff"), url("../fonts/Outfit-Light.ttf") format("truetype"), url("../fonts/Outfit-Light.svg#Roboto") format("svg");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: "Nunito";
-  src: url("../fonts/Nunito-Regular.eot");
-  src: local("Nunito Regular"), local("Nunito-Regular"), url("../fonts/Nunito-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Nunito-Regular.woff") format("woff"), url("../fonts/Nunito-Regular.ttf") format("truetype"), url("../fonts/Nunito-Regular.svg#Roboto") format("svg");
+  font-family: "Outfit";
+  src: url("../fonts/Outfit-Regular.eot");
+  src: local("Outfit Regular"), local("Outfit-Regular"), url("../fonts/Outfit-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-Regular.woff") format("woff"), url("../fonts/Outfit-Regular.ttf") format("truetype"), url("../fonts/Outfit-Regular.svg#Roboto") format("svg");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "Nunito";
-  src: url("../fonts/Nunito-Medium.eot");
-  src: local("Nunito Medium"), local("Nunito-Medium"), url("../fonts/Nunito-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Nunito-Medium.woff") format("woff"), url("../fonts/Nunito-Medium.ttf") format("truetype"), url("../fonts/Nunito-Medium.svg#Roboto") format("svg");
+  font-family: "Outfit";
+  src: url("../fonts/Outfit-Medium.eot");
+  src: local("Outfit Medium"), local("Outfit-Medium"), url("../fonts/Outfit-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-Medium.woff") format("woff"), url("../fonts/Outfit-Medium.ttf") format("truetype"), url("../fonts/Outfit-Medium.svg#Roboto") format("svg");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: "Nunito";
-  src: url("../fonts/Nunito-SemiBold.eot");
-  src: local("Nunito SemiBold"), local("Nunito-SemiBold"), url("../fonts/Nunito-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Nunito-SemiBold.woff") format("woff"), url("../fonts/Nunito-SemiBold.ttf") format("truetype"), url("../fonts/Nunito-SemiBold.svg#Roboto") format("svg");
+  font-family: "Outfit";
+  src: url("../fonts/Outfit-SemiBold.eot");
+  src: local("Outfit SemiBold"), local("Outfit-SemiBold"), url("../fonts/Outfit-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-SemiBold.woff") format("woff"), url("../fonts/Outfit-SemiBold.ttf") format("truetype"), url("../fonts/Outfit-SemiBold.svg#Roboto") format("svg");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
-  font-family: "Nunito";
-  src: url("../fonts/Nunito-Bold.eot");
-  src: local("Nunito Bold"), local("Nunito-Bold"), url("../fonts/Nunito-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Nunito-Bold.woff") format("woff"), url("../fonts/Nunito-Bold.ttf") format("truetype"), url("../fonts/Nunito-Bold.svg#Roboto") format("svg");
+  font-family: "Outfit";
+  src: url("../fonts/Outfit-Bold.eot");
+  src: local("Outfit Bold"), local("Outfit-Bold"), url("../fonts/Outfit-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-Bold.woff") format("woff"), url("../fonts/Outfit-Bold.ttf") format("truetype"), url("../fonts/Outfit-Bold.svg#Roboto") format("svg");
   font-weight: 700;
   font-style: normal;
 }
