--- a/public/assets/css/app-saas.css
+++ b/public/assets/css/app-saas.css
@@ -17025,7 +17025,7 @@ html[data-theme=dark] .auth-brand .logo-light {
 }
 
 body.authentication-bg {
-  background-image: url("../images/bg-pattern-light.svg");
+  /* background-image: url("../images/bg-pattern-light.svg"); */
   background-size: cover;
   background-position: center;
 }
