--- a/public/assets/css/app-saas.css
+++ b/public/assets/css/app-saas.css
@@ -14408,20 +14408,20 @@ html[data-layout=topnav] #topnav-color {
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
+/* @font-face {
   font-family: "Outfit";
   src: url("../fonts/Outfit-Medium.eot");
   src: local("Outfit Medium"), local("Outfit-Medium"), url("../fonts/Outfit-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-Medium.woff") format("woff"), url("../fonts/Outfit-Medium.ttf") format("truetype"), url("../fonts/Outfit-Medium.svg#Roboto") format("svg");
   font-weight: 500;
   font-style: normal;
-}
-@font-face {
+} */
+/* @font-face {
   font-family: "Outfit";
   src: url("../fonts/Outfit-SemiBold.eot");
   src: local("Outfit SemiBold"), local("Outfit-SemiBold"), url("../fonts/Outfit-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Outfit-SemiBold.woff") format("woff"), url("../fonts/Outfit-SemiBold.ttf") format("truetype"), url("../fonts/Outfit-SemiBold.svg#Roboto") format("svg");
   font-weight: 600;
   font-style: normal;
-}
+} */
 @font-face {
   font-family: "Outfit";
   src: url("../fonts/Outfit-Bold.eot");
