--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -5,8 +5,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    max-height: 400px; /* Mantém o chat dentro de um card */
-    overflow-y: auto; /* Permite rolagem vertical */
+    max-height: 700px;
+    overflow-y: auto;
 }
 
 .message {
@@ -39,6 +39,7 @@
     background-color: #dcf8c6;
     border-radius: 8px 8px 0 8px;
     align-self: flex-end;
+    margin-right: 5px;
 }
 
 .admin-message .message-content {
@@ -46,6 +47,7 @@
     border-radius: 8px 8px 8px 0;
     border: 1px solid #ddd;
     align-self: flex-start;
+    margin-left: 10px;
 }
 
 .message-header {
@@ -62,4 +64,5 @@
     font-size: 12px;
     color: #777;
     align-self: flex-end;
+    margin-right: 10px;
 }
