--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -5,10 +5,17 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    max-height: 900px;
+    /* max-height: 900px; */
     overflow-y: auto;
 }
-
+.border-online {
+    border: 3px solid #2fd155; /* verde */
+  }
+  
+  .border-offline {
+    border: 3px solid #dc3545; /* vermelho */
+  }
+  
 .message {
     display: flex;
     width: 100%;
